@@ -5,7 +5,62 @@
  * @file
  * Theme implementation to display information about the post author.
  *
- * Available variables are listed in author-pane.tpl.php in Author Pane module.
+ * Available variables (core modules):
+ * - $account: The entire user object for the author.
+ * - $picture: Themed user picture for the author.
+ * - $account_name: Themed user name for the author.
+ * - $account_id: User ID number for the author.
+ *
+ * - $joined: Date the post author joined the site.
+ * - $joined_ago: Time since the author registered in the format "TIME ago"
+ *
+ * - $online_icon: Icon that changes depending on whether the author is online.
+ * - $online_status: Translated text "Online" or "Offline"
+ * - $last_active: Time since author was last active. eg: "5 days 3 hours"
+ *
+ * - $contact: Linked icon.
+ * - $contact_link: Linked translated text "Contact user".
+ *
+ * - $profile - Profile object from core profile.
+ *     D5 Usage: $profile['category']['field_name']['value']
+ *     D5 Example: <?php print $profile['Personal info']['profile_name']['value']; ?>
+ *     D6 Usage: $profile['category']['field_name']['#value']
+ *     D6 Example: <?php print $profile['Personal info']['profile_name']['#value']; ?>
+ *
+ * Available variables (contributed modules):
+ * - $buddylist: Linked icon.
+ * - $buddylist_link: Linked translated text "Add to buddylist" or "Remove from buddylist".
+
+ * - $user_relationship_api: Linked icon.
+ * - $user_relationship_api_link: Linked text "Add to <relationship>" or "Remove from <relationship>".
+
+ * - $flag_friend: Linked icon.
+ * - $flag_friend_link: Linked text. Actual text depends on module settings.
+
+ * - $facebook_status: Status, including username, from the facebook status module.
+ * - $facebook_status_status: Status from the facebook status module.
+ *
+ * - $privatemsg: Linked icon.
+ * - $privatemsg_link: Linked translated text "Send PM".
+ *
+ * - $user_badges: Badges from user badges module.
+ *
+ * - $userpoints_points: Author's total number of points from all categories.
+ * - $userpoints_categories: Array holding each category and the points for that category.
+ *
+ * - $user_stats_posts: Number of posts from user stats module.
+ * - $user_stats_ip: IP address from user stats module.
+ *
+ * - $user_title: Title from user titles module.
+ * - $user_title_image: Image version of title from user titles module.
+
+ * - $og_groups: Linked list of OG groups author is a member of.
+
+ * - $location: User location as reported by the location module.
+
+ * - $fasttoggle_block_author: Link to toggle the author blocked/unblocked.
+ 
+ * - $troll_ban_author: Link to ban author via the Troll module.
  */
 ?>
 
@@ -22,18 +77,15 @@
         <?php print $picture; ?>
       <?php endif; ?>
 
-      <div class="author-pane-line author-pane-online-icon"><?php print $online_icon; ?></div>
+      <div class="author-pane-line author-pane-online">
+        <span class="author=pane-online-icon"><?php print $online_icon; ?></span>
+        <span class="author=pane-online-status"><?php print $online_status; ?></span>
+      </div>
 
-      <?php if (!empty($user_title) || !empty($user_title_image)): ?>
-        <div class="author-pane-line author-title">
-          <?php if (!empty($user_title_image)): ?>
-            <?php print $user_title_image; ?>
-          <?php else: ?>
-            <span class="author-pane-label"><?php print t('Title'); ?>:</span> <?php print $user_title; ?>
-          <?php endif; ?>
-        </div>
+      <?php if (!empty($user_title)): ?>
+        <div class="author-pane-line author-title"> <?php print $user_title; ?> </div>
       <?php endif; ?>
-
+      
       <?php if (!empty($user_badges)): ?>
         <div class="author-pane-line author-badges"> <?php print $user_badges;  ?> </div>
       <?php endif; ?>
